# DRF-mileage-service

./: .gitignore  README.md  pyproject.toml  test.sh
config/: settings.py  urls.py
mileage/: admin.py  apps.py  urls.py  views.py
mileage/api/: serializers.py  services.py  urls.py  views.py
mileage/api/services/: add_service.py  delete_survice.py  mod_survice.py
mileage/migrations/: 0001_initial.py  0002_alter_event_action_alter_event_placeid_and_more.py  0002_rename_placeid_review_place_id_and_more.py  0003_alter_event_placeid_alter_event_reviewid_and_more.py  0003_alter_placehistory_place_id_alter_point_user_id_and_more.py  0004_remove_placehistory_id_alter_event_placeid_and_more.py  0005_alter_event_placeid_alter_event_reviewid_and_more.py
mileage/models/: __init__.py  event.py  place.py  placeHistory.py  point.py  pointhistory.py  review.py  reviewPhoto.py  user.py
